# Advent_of_Code

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMake_dependencies.cmake  README.md  vcpkg.json
src/: AOC_commons.cpp  CMakeLists.txt  LC_commons.cpp  main.cpp
src/internal/: CMakeLists.txt
src/internal/incom_commons/: incom_aoc_solver.h  incom_commons.cpp  incom_commons.h  incom_omni.h
src/internal/incom_omni/: incom_omni.cpp
src/internal/incom_seq/: incom_seq.cpp  incom_seq.h
src/internal/omni/: omni.h
src/problems/: CMakeLists.txt
src/problems/AOC_2015/: AOC_2015.h  AOC_2015_day_1.cpp  AOC_2015_day_1.h  AOC_2015_day_10.cpp  AOC_2015_day_10.h  AOC_2015_day_11.cpp  AOC_2015_day_11.h  AOC_2015_day_12.cpp  AOC_2015_day_12.h  AOC_2015_day_13.cpp  AOC_2015_day_13.h  AOC_2015_day_14.cpp  AOC_2015_day_14.h  AOC_2015_day_15.cpp  AOC_2015_day_15.h  AOC_2015_day_16.cpp  AOC_2015_day_16.h  AOC_2015_day_17.cpp  AOC_2015_day_17.h  AOC_2015_day_18.cpp  AOC_2015_day_18.h  AOC_2015_day_19.cpp  AOC_2015_day_19.h  AOC_2015_day_2.cpp  AOC_2015_day_2.h  AOC_2015_day_20.cpp  AOC_2015_day_20.h  AOC_2015_day_21.cpp  AOC_2015_day_21.h  AOC_2015_day_22.cpp  AOC_2015_day_22.h  AOC_2015_day_23.cpp  AOC_2015_day_23.h  AOC_2015_day_24.cpp  AOC_2015_day_24.h  AOC_2015_day_25.cpp  AOC_2015_day_25.h  AOC_2015_day_3.cpp  AOC_2015_day_3.h  AOC_2015_day_4.cpp  (+9 more)
src/problems/AOC_2016/: AOC_2016.h  AOC_2016_day_1.cpp  AOC_2016_day_1.h  AOC_2016_day_10.cpp  AOC_2016_day_10.h  AOC_2016_day_11.cpp  AOC_2016_day_11.h  AOC_2016_day_12.cpp  AOC_2016_day_12.h  AOC_2016_day_13.cpp  AOC_2016_day_13.h  AOC_2016_day_14.cpp  AOC_2016_day_14.h  AOC_2016_day_15.cpp  AOC_2016_day_15.h  AOC_2016_day_16.cpp  AOC_2016_day_16.h  AOC_2016_day_17.cpp  AOC_2016_day_17.h  AOC_2016_day_18.cpp  AOC_2016_day_18.h  AOC_2016_day_19.cpp  AOC_2016_day_19.h  AOC_2016_day_2.cpp  AOC_2016_day_2.h  AOC_2016_day_20.cpp  AOC_2016_day_20.h  AOC_2016_day_21.cpp  AOC_2016_day_21.h  AOC_2016_day_22.cpp  AOC_2016_day_22.h  AOC_2016_day_23.cpp  AOC_2016_day_23.h  AOC_2016_day_24.cpp  AOC_2016_day_24.h  AOC_2016_day_25.cpp  AOC_2016_day_25.h  AOC_2016_day_3.cpp  AOC_2016_day_3.h  AOC_2016_day_4.cpp  (+11 more)
src/problems/AOC_2017/: AOC_2017_day_1.cpp  AOC_2017_day_1.h  AOC_2017_day_10.cpp  AOC_2017_day_10.h  AOC_2017_day_11.cpp  AOC_2017_day_11.h  AOC_2017_day_12.cpp  AOC_2017_day_12.h  AOC_2017_day_13.cpp  AOC_2017_day_13.h  AOC_2017_day_14.cpp  AOC_2017_day_14.h  AOC_2017_day_15.cpp  AOC_2017_day_15.h  AOC_2017_day_16.cpp  AOC_2017_day_16.h  AOC_2017_day_17.cpp  AOC_2017_day_17.h  AOC_2017_day_18.cpp  AOC_2017_day_18.h  AOC_2017_day_19.cpp  AOC_2017_day_19.h  AOC_2017_day_2.cpp  AOC_2017_day_2.h  AOC_2017_day_20.cpp  AOC_2017_day_20.h  AOC_2017_day_21.cpp  AOC_2017_day_21.h  AOC_2017_day_22.cpp  AOC_2017_day_22.h  AOC_2017_day_23.cpp  AOC_2017_day_23.h  AOC_2017_day_24.cpp  AOC_2017_day_24.h  AOC_2017_day_25.cpp  AOC_2017_day_25.h  AOC_2017_day_3.cpp  AOC_2017_day_3.h  AOC_2017_day_4.cpp  AOC_2017_day_4.h  (+10 more)
src/problems/AOC_2017/include/: AOC_2017.h
src/problems/AOC_2018/: AOC_2018.h  AOC_2018_TEMP.cpp  AOC_2018_TEMP.h  AOC_2018_day_1.cpp  AOC_2018_day_1.h  AOC_2018_day_10.cpp  AOC_2018_day_10.h  AOC_2018_day_11.cpp  AOC_2018_day_11.h  AOC_2018_day_12.cpp  AOC_2018_day_12.h  AOC_2018_day_13.cpp  AOC_2018_day_13.h  AOC_2018_day_14.cpp  AOC_2018_day_14.h  AOC_2018_day_15.cpp  AOC_2018_day_15.h  AOC_2018_day_16.cpp  AOC_2018_day_16.h  AOC_2018_day_17.cpp  AOC_2018_day_17.h  AOC_2018_day_18.cpp  AOC_2018_day_18.h  AOC_2018_day_19.cpp  AOC_2018_day_19.h  AOC_2018_day_2.cpp  AOC_2018_day_2.h  AOC_2018_day_20.cpp  AOC_2018_day_20.h  AOC_2018_day_21.cpp  AOC_2018_day_21.h  AOC_2018_day_22.cpp  AOC_2018_day_22.h  AOC_2018_day_23.cpp  AOC_2018_day_23.h  AOC_2018_day_24.cpp  AOC_2018_day_24.h  AOC_2018_day_25.cpp  AOC_2018_day_25.h  AOC_2018_day_3.cpp  (+13 more)
src/problems/AOC_2019/: AOC_2019.h  AOC_2019_day_1.cpp  AOC_2019_day_1.h  AOC_2019_day_10.cpp  AOC_2019_day_10.h  AOC_2019_day_11.cpp  AOC_2019_day_11.h  AOC_2019_day_12.cpp  AOC_2019_day_12.h  AOC_2019_day_13.cpp  AOC_2019_day_13.h  AOC_2019_day_14.cpp  AOC_2019_day_14.h  AOC_2019_day_15.cpp  AOC_2019_day_15.h  AOC_2019_day_16.cpp  AOC_2019_day_16.h  AOC_2019_day_17.cpp  AOC_2019_day_17.h  AOC_2019_day_18.cpp  AOC_2019_day_18.h  AOC_2019_day_19.cpp  AOC_2019_day_19.h  AOC_2019_day_2.cpp  AOC_2019_day_2.h  AOC_2019_day_20.cpp  AOC_2019_day_20.h  AOC_2019_day_21.cpp  AOC_2019_day_21.h  AOC_2019_day_22.cpp  AOC_2019_day_22.h  AOC_2019_day_23.cpp  AOC_2019_day_23.h  AOC_2019_day_24.cpp  AOC_2019_day_24.h  AOC_2019_day_25.cpp  AOC_2019_day_25.h  AOC_2019_day_3.cpp  AOC_2019_day_3.h  AOC_2019_day_4.cpp  (+11 more)
src/problems/AOC_2024/: AOC_2024_day_1.cpp  AOC_2024_day_1.h  AOC_2024_day_10.cpp  AOC_2024_day_10.h  AOC_2024_day_11.cpp  AOC_2024_day_11.h  AOC_2024_day_12.cpp  AOC_2024_day_12.h  AOC_2024_day_13.cpp  AOC_2024_day_13.h  AOC_2024_day_14.cpp  AOC_2024_day_14.h  AOC_2024_day_15.cpp  AOC_2024_day_15.h  AOC_2024_day_16.cpp  AOC_2024_day_16.h  AOC_2024_day_17.cpp  AOC_2024_day_17.h  AOC_2024_day_18.cpp  AOC_2024_day_18.h  AOC_2024_day_19.cpp  AOC_2024_day_19.h  AOC_2024_day_2.cpp  AOC_2024_day_2.h  AOC_2024_day_20.cpp  AOC_2024_day_20.h  AOC_2024_day_21.cpp  AOC_2024_day_21.h  AOC_2024_day_22.cpp  AOC_2024_day_22.h  AOC_2024_day_23.cpp  AOC_2024_day_23.h  AOC_2024_day_24.cpp  AOC_2024_day_24.h  AOC_2024_day_25.cpp  AOC_2024_day_25.h  AOC_2024_day_3.cpp  AOC_2024_day_3.h  AOC_2024_day_4.cpp  AOC_2024_day_4.h  (+10 more)
src/problems/AOC_2025/: AOC_2025_day_1.cpp  AOC_2025_day_1.h  AOC_2025_day_10.cpp  AOC_2025_day_11.cpp  AOC_2025_day_11.h  AOC_2025_day_12.cpp  AOC_2025_day_2.cpp  AOC_2025_day_2.h  AOC_2025_day_3.cpp  AOC_2025_day_3.h  AOC_2025_day_4.cpp  AOC_2025_day_4.h  AOC_2025_day_5.cpp  AOC_2025_day_5.h  AOC_2025_day_6.cpp  AOC_2025_day_6.h  AOC_2025_day_7.cpp  AOC_2025_day_7.h  AOC_2025_day_8.cpp  AOC_2025_day_8.h  AOC_2025_day_9.cpp
test/: CMakeLists.txt
test/problems/: AOC_2015_test.cpp  AOC_2016_test.cpp  AOC_2017_test.cpp  AOC_2018_test.cpp  AOC_2019_test.cpp  AOC_2024_test.cpp  AOC_2025_test.cpp
(+20 files in other folders)
